--- a/Slave/MainWindow.xaml
+++ b/Slave/MainWindow.xaml
@@ -4,6 +4,8 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525" Background="Black" Closing="Window_Closing">
+        Title="MainWindow" Height="350" Width="525"
+        Visibility="Hidden" ShowInTaskbar="False"
+        Closing="Window_Closing">
     <Grid/>
 </Window>
